[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Grass.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/Spawner.gd" type="Script" id=3]
[ext_resource path="res://scenes/Roket.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Level1.gd" type="Script" id=5]
[ext_resource path="res://scenes/PinkFish.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1093, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 158, 239 )

[node name="Level1" type="Node2D"]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 144, 52 )
collision_layer = 3
collision_mask = 3
speed = 300

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 2, 0 )
tile_set = ExtResource( 2 )
collision_layer = 3
format = 1
tile_data = PoolIntArray( 131073, 0, 65543, 131075, 0, 65543, 131077, 0, 65543, 131079, 0, 65540, 196646, 0, 3, 196648, 0, 4, 262145, 0, 1, 262147, 0, 1, 262149, 0, 1, 262151, 0, 7, 262153, 0, 65543, 262155, 0, 65543, 262157, 0, 65544, 262161, 0, 3, 262163, 0, 4, 262167, 0, 3, 262169, 0, 65543, 262171, 0, 4, 262176, 0, 3, 262178, 0, 4 )

[node name="LoseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoseArea"]
position = Vector2( 773, 631 )
shape = SubResource( 1 )

[node name="RigidBody2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 2400, -5 )

[node name="WinArea" type="Area2D" parent="RigidBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/WinArea"]
position = Vector2( 148, -52 )
shape = SubResource( 2 )

[node name="Fish Spawner" type="Node2D" parent="."]
position = Vector2( 1019, -465 )
script = ExtResource( 3 )
obstacle = ExtResource( 6 )

[connection signal="body_entered" from="LoseArea" to="." method="_on_LoseArea_body_entered"]
[connection signal="body_entered" from="RigidBody2D/WinArea" to="." method="_on_WinArea_body_entered"]
